--- a/packages/app/src/styles/vars.less
+++ b/packages/app/src/styles/vars.less
@@ -12,6 +12,7 @@
 @card-shadow-top: 0 -4px 3px 0 rgba(63, 63, 68, 0.05), 0 0 0 2px var(--shadow-color);
 
 @default-object-padding: 10px;
+@default-gap: 20px;
 
 @menu-selected-item-dash-width: 3px;
 @menu-selected-item-dash-height: 50%;
